Fixed spacing

--- a/src/main/resources/fxml/calendar.css
+++ b/src/main/resources/fxml/calendar.css
@@ -1,8 +1,22 @@
-GridPane {-fx-background-color: #FFF0BA; -fx-grid-lines-visible: true;}
-Text {-fx-text-alignment: center;}
-VBox {-fx-alignment: center;}
+GridPane {
+    -fx-background-color: #FFF0BA; 
+    -fx-grid-lines-visible: true;
+}
+
+Text {
+    -fx-text-alignment: center;
+}
+
+VBox {
+    -fx-alignment: center;
+}
+
 #createEventButton { 
     -fx-graphic: url("../../images/post-it-notes1.jpg"); 
     -fx-content-display: center;
-    }
-.newNotification {-fx-font-size: 20; -fx-fill: RED;}
+}
+
+.newNotification {
+    -fx-font-size: 20;
+    -fx-fill: RED;
+}
